🐛 fix(app): remove iiif more button on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,7 @@ a > span > .text-xs, button {
 .clover-viewer-media-wrapper {
   display: none;
 }
+
+.clover-viewer-content > div > button {
+  display: none;
+}
